# proxy_device

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.py
client/cpp/: CMakeLists.txt  client.cpp
client/go/: CMakeLists.txt  client.go  cmd_flags.go
client/py/: client.py
cmake/: GolangSimple.cmake
proxy/: CMakeLists.txt  go.mod  proxy.go
server/: CMakeLists.txt  go.mod  server.go
service/: CMakeLists.txt
service/src/: main.c  service.c  service.h
